# fractio

./: .gitignore  AGENTS.md  MEMORY.md  README.md  fractio.nimble  run_storage_tests.sh
benchmarks/: BENCHMARK_COMPARISON.md  CONCURRENT_TEST_RESULTS.md  FIX_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  fractio_bench.nim  run_benchmarks.sh
benchmarks/fjall/: nim.nim
benchmarks/fjall/rust/: main.rs
benchmarks/fjall_bench/: Cargo.toml  main.rs
benchmarks/lsm_tree_v2/: nim.nim  run_benchmarks.sh
benchmarks/lsm_tree_v2/rust/: Cargo.toml
benchmarks/lsm_tree_v2/rust/src/: main.rs
benchmarks/skiplist/: nim  nim.nim
benchmarks/skiplist/java/: Main.java  SkipList.java  SkipListBenchmark.java
benchmarks/skiplist/rust/: Cargo.toml
benchmarks/skiplist/rust/src/: main.rs
docs/: LSM_TREE_DRIFT_ANALYSIS.md  PHASE1_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_FINAL_STATUS.md  PHASE1_FINAL_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_PROGRESS.md  fjall_port_plan.md  implementation_comparison.md  lsm_tree_v2_comparison.md  nim_vs_rust_lsm_comparison.md  skiplist_optimization_plan.md
docs/distributed/: raft_multigroup_design.md  sharedtimer_design.md
src/fractio/: storage.nim  transaction.nim
src/fractio/core/: errors.nim  types.nim
src/fractio/distributed/: sharedtimer.nim  timesync.nim
src/fractio/network/: packetcodec.nim
src/fractio/storage/: batch.nim  (+34 more)
tests/: test_timesync  test_timesync.nim
tests/integration/: test_db_integration.nim  test_sharedtimer_udp_integration  test_sharedtimer_udp_integration.nim
tests/unit/: test_timesync
(+151 files in other folders)
