[package]
name = "lsm_tree_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
lsm-tree = { path = "../../../thirdparty/lsm-tree" }
rand = "0.9"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
